--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
       <div class="card-body">
         <div class = "text-info">
-            <img = "heart figurine.jpg" alt = "heart">
+            <img src = "heart figurine.jpg" alt = "heart">
 </div>
       </div>
     </div>
