--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body">
           <div class = "text-info">
- 
+        <img src = "pink earings.jpg" alt = "earrings">
       </div>
     </div>
   </div>
