--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
     <div class="text-info">
+        <img src = "pink hat gnome.jpg" alt = "no gnome">
 
 <br>
         </div>
