added board art
Called to serve Oklahoma

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
+          <img src = "board art called to serve.jpg" alt = "no mission">
     </div>
   </div>
 </div>
