--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
       <div class="card-body">
         <div class = "text-info">
             <img src = "heart figurine.jpg" alt = "heart">
+            <img src = "flag figurine.jpg" alt = "sad country">
 </div>
       </div>
     </div>
@@ -140,6 +141,7 @@
     </div>
     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
       <div class="card-body">
+          <img src = "flag figurine.jpg" alt = "sad country">
   </div>
 </div>
     </div>
