--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
     <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
       <div class="card-body">
         <div class = "text-info">
+            <img src = "board art called to serve.jpg" alt = "no mission">
     </div>
   </div>
 </div>
