--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <div class = "text-info">
             <img src = "heart figurine.jpg" alt = "heart">
             <img src = "flag figurine.jpg" alt = "sad country">
+            <img src = "nativity.jpg" alt = "Merry Christmas">
 </div>
       </div>
     </div>
@@ -142,6 +143,7 @@
     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
       <div class="card-body">
           <img src = "flag figurine.jpg" alt = "sad country">
+          <img src = "nativity.jpg" alt = "Merry Christmas">
   </div>
 </div>
     </div>
@@ -172,6 +174,7 @@
     <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
       <div class="card-body">
         <div class = "text-info">
+            <img src = "nativity.jpg" alt = "Merry Christmas">
 </div>
 
 
