--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <div class="card-body">
     <div class="text-info">
         <img src = "pink hat gnome.jpg" alt = "no gnome">
+        <figcaption>pink hat gnome price = 10,000,000$</figcaption>
 
 <br>
         </div>
