--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <div class="card-body">
           <div class = "text-info">
         <img src = "pink earings.jpg" alt = "earrings">
+              <figcaption>pink earings = 10,000,000$</figcaption>
       </div>
     </div>
   </div>
@@ -112,6 +113,7 @@
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
           <img src = "board art called to serve.jpg" alt = "no mission">
+          <figcaption>Art board price = 10,000,000$</figcaption>
     </div>
   </div>
 </div>
@@ -127,8 +129,11 @@
       <div class="card-body">
         <div class = "text-info">
             <img src = "heart figurine.jpg" alt = "heart">
+            <figcaption>pink hat gnome price = 10,000,000$</figcaption>
             <img src = "flag figurine.jpg" alt = "sad country">
+            <figcaption>pink hat gnome price = 10,000,000$</figcaption>
             <img src = "nativity.jpg" alt = "Merry Christmas">
+            <figcaption>pink hat gnome price = 10,000,000$</figcaption>
 </div>
       </div>
     </div>
@@ -144,7 +149,9 @@
     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
       <div class="card-body">
           <img src = "flag figurine.jpg" alt = "sad country">
+          <figcaption>pink hat gnome price = 10,000,000$</figcaption>
           <img src = "nativity.jpg" alt = "Merry Christmas">
+          <figcaption>pink hat gnome price = 10,000,000$</figcaption>
   </div>
 </div>
     </div>
@@ -160,6 +167,7 @@
       <div class="card-body">
         <div class = "text-info">
             <img src = "board art called to serve.jpg" alt = "no mission">
+            <figcaption>pink hat gnome price = 10,000,000$</figcaption>
     </div>
   </div>
 </div>
@@ -176,6 +184,7 @@
       <div class="card-body">
         <div class = "text-info">
             <img src = "nativity.jpg" alt = "Merry Christmas">
+            <figcaption>Nativity price = 10,000,000$</figcaption>
 </div>
 
 
