--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
       <div class="card-body">
         <div class = "text-info">
             <img src = "heart figurine.jpg" alt = "heart">
-            <figcaption>pink hat gnome price = 10,000,000$</figcaption>
+            <figcaption>holding heart price = 10,000,000$</figcaption>
             <img src = "flag figurine.jpg" alt = "sad country">
-            <figcaption>pink hat gnome price = 10,000,000$</figcaption>
+            <figcaption>holding flag price = 10,000,000$</figcaption>
             <img src = "nativity.jpg" alt = "Merry Christmas">
-            <figcaption>pink hat gnome price = 10,000,000$</figcaption>
+            <figcaption>nativity price = 10,000,000$</figcaption>
 </div>
       </div>
     </div>
@@ -148,10 +148,11 @@
     </div>
     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
       <div class="card-body">
+          <div class = "text-info">
           <img src = "flag figurine.jpg" alt = "sad country">
-          <figcaption>pink hat gnome price = 10,000,000$</figcaption>
+          <figcaption>holding flag price = 10,000,000$</figcaption>
           <img src = "nativity.jpg" alt = "Merry Christmas">
-          <figcaption>pink hat gnome price = 10,000,000$</figcaption>
+          <figcaption>nativity price = 10,000,000$</figcaption>
   </div>
 </div>
     </div>
@@ -167,7 +168,7 @@
       <div class="card-body">
         <div class = "text-info">
             <img src = "board art called to serve.jpg" alt = "no mission">
-            <figcaption>pink hat gnome price = 10,000,000$</figcaption>
+            <figcaption>art board price = 10,000,000$</figcaption>
     </div>
   </div>
 </div>
