--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
+          <div class = "text-info">
           <img src = "board art called to serve.jpg" alt = "no mission">
           <figcaption>Art board price = 10,000,000$</figcaption>
     </div>
