--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
       <div class="card-body">
         <div class = "text-info">
-            <img src = "heart figurine.jpg" alt = "heart">
+            <img src = "heart figurine.jpg" alt = "heart" class = "image a">
             <figcaption>holding heart price = 10,000,000$</figcaption>
-            <img src = "flag figurine.jpg" alt = "sad country">
+            <img src = "flag figurine.jpg" alt = "sad country" class = "image b">
             <figcaption>holding flag price = 10,000,000$</figcaption>
-            <img src = "nativity.jpg" alt = "Merry Christmas">
+            <img src = "nativity.jpg" alt = "Merry Christmas" class = "image c">
             <figcaption>nativity price = 10,000,000$</figcaption>
 </div>
       </div>
@@ -150,9 +150,9 @@
     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
       <div class="card-body">
           <div class = "text-info">
-          <img src = "flag figurine.jpg" alt = "sad country">
+          <img src = "flag figurine.jpg" alt = "sad country" class = "image a">
           <figcaption>holding flag price = 10,000,000$</figcaption>
-          <img src = "nativity.jpg" alt = "Merry Christmas">
+          <img src = "nativity.jpg" alt = "Merry Christmas" class = "image b">
           <figcaption>nativity price = 10,000,000$</figcaption>
   </div>
 </div>
