--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
   <a href="#">Services</a>
   <a href="#">Clients</a>
   <a href="#">Contact</a>
+     <a href="#">Gnomes</a>
+     <a href="#">Jewelry</a>
+     <a href="#">Art Boards</a>
+     <a href="#">Figurines</a>
+     <a href="#">Holiday</a>
 </div>
 
 <div class="accordion" id="accordionExample">
