--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-<div class="p-3 mb-2 bg-primary text-white">
+<div>
 
         <!--Built using bootstrap, & font awesome-->
             <br>
