--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      <a href="#">Holiday</a>
 </div>
 
-<div class="accordion" id="accordionExample">
+<div class="accordion" id="accordionExample" class="w-75 p-3" style="background-color: #FFCDB2;>
   <div class="card">
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
